<resources>
    <string name="app_name">SzkolaLogowanie</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="username">Please enter your email adress</string>
    <string name="password" translatable="false">*********</string>
    <string name="remember_password">Remember password</string>
    <string name="login">Login</string>
    <string name="new_user">New User</string>
    <string name="forgot_password">Forgot password</string>
    <string name="convert_currency">Convert Currency</string>
    <string name="converts">converts to</string>
    <string name="convert">convert</string>
    <string name="change_currency">Change Currency</string>
</resources>